--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 server.port=8080
-logging.level.ru.yandex.practicum.filmorate.service.Manager=warn
+logging.level.ru.yandex.practicum.filmorate.service=warn
